--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "morgan": "^1.10.0",
     "qrcode": "^1.5.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "@aws-sdk/client-s3": "^3.645.0",
+    "multer": "^1.4.5-lts.1",
+    "@aws-sdk/s3-request-presigner": "^3.645.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
