--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start:test": "$env:NODE_ENV='test'; node server.js",
+    "dev:test": "$env:NODE_ENV='test'; nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,8 +23,9 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "@aws-sdk/client-s3": "^3.645.0",
-    "multer": "^1.4.5-lts.1",
-    "@aws-sdk/s3-request-presigner": "^3.645.0"
+    "multer": "^1.4.5-lts.2",
+    "@aws-sdk/s3-request-presigner": "^3.645.0",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
