--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dev:test": "$env:NODE_ENV='test'; nodemon server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.645.0",
+    "@aws-sdk/s3-request-presigner": "^3.645.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -19,13 +22,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
-    "qrcode": "^1.5.3",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "@aws-sdk/client-s3": "^3.645.0",
     "multer": "^1.4.5-lts.2",
-    "@aws-sdk/s3-request-presigner": "^3.645.0",
-    "axios": "^1.7.7"
+    "qrcode": "^1.5.3",
+    "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
