--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "node-fetch": "^3.3.2",
     "qrcode": "^1.5.3",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
