--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:tls": "cross-env USE_HTTPS=1 vite",
+    "cert": "powershell -ExecutionPolicy Bypass -File scripts/generate-dev-pfx.ps1 -OutputPfx ./certs/dev-cert.pfx -Password pawster-dev",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -19,6 +21,7 @@
     "zustand": "^4.5.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
